force-app/main/default/objects/BMCServiceDesk__StandardDescription__c/BMCServiceDesk__StandardDescription__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for standard description records.</description>
    <label>Standard Description</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>