force-app/main/default/objects/BMCServiceDesk__StandardDescription__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <inlineHelpText>Use this field to enter a standard description for the selected category. This description will be added to the selected category&apos;s list of standard descriptions.</inlineHelpText>
    <label>Standard Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>