force-app/main/default/objects/BMCServiceDesk__StandardDescription__c/fields/BMCServiceDesk__FKCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the category for which you want to create a standard description.</inlineHelpText>
    <label>Category</label>
    <referenceTo>BMCServiceDesk__Category__c</referenceTo>
    <relationshipName>StandardDescriptions2</relationshipName>
    <type>Lookup</type>
</CustomField>