force-app/main/default/objects/BMCServiceDesk__StandardDescription__c/fields/BMCServiceDesk__inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if the standard description record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>