force-app/main/default/objects/BMCServiceDesk__StandardDescription__c/validationRules/BMCServiceDesk__Standard_Description_Category_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Standard_Description_Category_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL( BMCServiceDesk__category_Id__c ) , ISBLANK( BMCServiceDesk__category_Id__c ))</errorConditionFormula>
    <errorMessage>Please enter Category.</errorMessage>
</ValidationRule>